// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo component has logo.png 1`] = `
<a
  aria-current="page"
  className="logo active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  <img
    alt="Reddit Logo"
    src="logo.png"
  />
  <span>
    Reddit
    <small>
      Client
    </small>
  </span>
</a>
`;

exports[`Logo component matches the snapshot 1`] = `
<a
  aria-current="page"
  className="logo active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  <img
    alt="Reddit Logo"
    src="logo.png"
  />
  <span>
    Simple
    <small>
      REDDIT
    </small>
  </span>
</a>
`;
